cmd/y.output

state 0
	$accept: .root $end 

	LABEL  shift 11
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	LET  shift 4
	FORWARD  shift 10
	SELF  shift 13
	PRINT  shift 12
	.  error

	expression  goto 3
	name  goto 7
	root  goto 1
	program  goto 2

state 1
	$accept:  root.$end 

	$end  accept
	.  error


state 2
	root:  program.    (1)

	.  reduce 1 (src line 34)


state 3
	program:  expression.    (2)

	.  reduce 2 (src line 37)


state 4
	program:  LET.functions IN processes END 
	functions: .    (27)

	LABEL  shift 15
	.  reduce 27 (src line 93)

	functions  goto 14

state 5
	expression:  SEND.name LANGLE name COMMA name RANGLE 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 16

state 6
	expression:  LANGLE.name COMMA name RANGLE LEFT_ARROW RECEIVE name SEQUENCE expression 
	expression:  LANGLE.name COMMA name RANGLE LEFT_ARROW SPLIT name SEQUENCE expression 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 18

state 7
	expression:  name.DOT LABEL LANGLE name RANGLE 
	expression:  name.LEFT_ARROW NEW LPAREN expression RPAREN SEQUENCE expression 
	expression:  name.LEFT_ARROW NEW expression SEQUENCE expression 

	LEFT_ARROW  shift 20
	DOT  shift 19
	.  error


state 8
	expression:  CASE.name LPAREN branches RPAREN 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 21

state 9
	expression:  CLOSE.name 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 22

state 10
	expression:  FORWARD.name name 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 23

state 11
	expression:  LABEL.LPAREN RPAREN 
	expression:  LABEL.LPAREN names RPAREN 
	name:  LABEL.    (26)

	LPAREN  shift 24
	.  reduce 26 (src line 91)


state 12
	expression:  PRINT.name 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 25

state 13
	name:  SELF.    (25)

	.  reduce 25 (src line 90)


state 14
	program:  LET functions.IN processes END 

	IN  shift 26
	.  error


state 15
	functions:  LABEL.LPAREN RPAREN EQUALS expression 
	functions:  LABEL.LPAREN names RPAREN EQUALS expression functions 

	LPAREN  shift 27
	.  error


state 16
	expression:  SEND name.LANGLE name COMMA name RANGLE 

	LANGLE  shift 28
	.  error


state 17
	name:  LABEL.    (26)

	.  reduce 26 (src line 91)


state 18
	expression:  LANGLE name.COMMA name RANGLE LEFT_ARROW RECEIVE name SEQUENCE expression 
	expression:  LANGLE name.COMMA name RANGLE LEFT_ARROW SPLIT name SEQUENCE expression 

	COMMA  shift 29
	.  error


state 19
	expression:  name DOT.LABEL LANGLE name RANGLE 

	LABEL  shift 30
	.  error


state 20
	expression:  name LEFT_ARROW.NEW LPAREN expression RPAREN SEQUENCE expression 
	expression:  name LEFT_ARROW.NEW expression SEQUENCE expression 

	NEW  shift 31
	.  error


state 21
	expression:  CASE name.LPAREN branches RPAREN 

	LPAREN  shift 32
	.  error


state 22
	expression:  CLOSE name.    (14)

	.  reduce 14 (src line 64)


state 23
	expression:  FORWARD name.name 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 33

state 24
	expression:  LABEL LPAREN.RPAREN 
	expression:  LABEL LPAREN.names RPAREN 

	LABEL  shift 17
	RPAREN  shift 34
	SELF  shift 13
	.  error

	name  goto 36
	names  goto 35

state 25
	expression:  PRINT name.    (19)

	.  reduce 19 (src line 74)


state 26
	program:  LET functions IN.processes END 

	SPRC  shift 40
	PRC  shift 39
	.  error

	processes  goto 37
	process  goto 38

state 27
	functions:  LABEL LPAREN.RPAREN EQUALS expression 
	functions:  LABEL LPAREN.names RPAREN EQUALS expression functions 

	LABEL  shift 17
	RPAREN  shift 41
	SELF  shift 13
	.  error

	name  goto 36
	names  goto 42

state 28
	expression:  SEND name LANGLE.name COMMA name RANGLE 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 43

state 29
	expression:  LANGLE name COMMA.name RANGLE LEFT_ARROW RECEIVE name SEQUENCE expression 
	expression:  LANGLE name COMMA.name RANGLE LEFT_ARROW SPLIT name SEQUENCE expression 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 44

state 30
	expression:  name DOT LABEL.LANGLE name RANGLE 

	LANGLE  shift 45
	.  error


state 31
	expression:  name LEFT_ARROW NEW.LPAREN expression RPAREN SEQUENCE expression 
	expression:  name LEFT_ARROW NEW.expression SEQUENCE expression 

	LABEL  shift 11
	LPAREN  shift 46
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 13
	PRINT  shift 12
	.  error

	expression  goto 47
	name  goto 7

state 32
	expression:  CASE name LPAREN.branches RPAREN 
	branches: .    (20)

	LABEL  shift 49
	.  reduce 20 (src line 82)

	branches  goto 48

state 33
	expression:  FORWARD name name.    (15)

	.  reduce 15 (src line 66)


state 34
	expression:  LABEL LPAREN RPAREN.    (17)

	.  reduce 17 (src line 70)


state 35
	expression:  LABEL LPAREN names.RPAREN 

	RPAREN  shift 50
	.  error


state 36
	names:  name.    (23)
	names:  name.COMMA names 

	COMMA  shift 51
	.  reduce 23 (src line 87)


state 37
	program:  LET functions IN processes.END 

	END  shift 52
	.  error


state 38
	processes:  process.processes 
	processes:  process.    (5)

	SPRC  shift 40
	PRC  shift 39
	.  reduce 5 (src line 47)

	processes  goto 53
	process  goto 38

state 39
	process:  PRC.LSBRACK names RSBRACK COLON expression 

	LSBRACK  shift 54
	.  error


state 40
	process:  SPRC.LSBRACK names RSBRACK COLON expression 

	LSBRACK  shift 55
	.  error


state 41
	functions:  LABEL LPAREN RPAREN.EQUALS expression 

	EQUALS  shift 56
	.  error


state 42
	functions:  LABEL LPAREN names.RPAREN EQUALS expression functions 

	RPAREN  shift 57
	.  error


state 43
	expression:  SEND name LANGLE name.COMMA name RANGLE 

	COMMA  shift 58
	.  error


state 44
	expression:  LANGLE name COMMA name.RANGLE LEFT_ARROW RECEIVE name SEQUENCE expression 
	expression:  LANGLE name COMMA name.RANGLE LEFT_ARROW SPLIT name SEQUENCE expression 

	RANGLE  shift 59
	.  error


state 45
	expression:  name DOT LABEL LANGLE.name RANGLE 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 60

state 46
	expression:  name LEFT_ARROW NEW LPAREN.expression RPAREN SEQUENCE expression 

	LABEL  shift 11
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 13
	PRINT  shift 12
	.  error

	expression  goto 61
	name  goto 7

state 47
	expression:  name LEFT_ARROW NEW expression.SEQUENCE expression 

	SEQUENCE  shift 62
	.  error


state 48
	expression:  CASE name LPAREN branches.RPAREN 
	branches:  branches.PIPE LABEL LANGLE name RANGLE RIGHT_ARROW expression 

	RPAREN  shift 63
	PIPE  shift 64
	.  error


state 49
	branches:  LABEL.LANGLE name RANGLE RIGHT_ARROW expression 

	LANGLE  shift 65
	.  error


state 50
	expression:  LABEL LPAREN names RPAREN.    (18)

	.  reduce 18 (src line 72)


state 51
	names:  name COMMA.names 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 36
	names  goto 66

state 52
	program:  LET functions IN processes END.    (3)

	.  reduce 3 (src line 41)


state 53
	processes:  process processes.    (4)

	.  reduce 4 (src line 46)


state 54
	process:  PRC LSBRACK.names RSBRACK COLON expression 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 36
	names  goto 67

state 55
	process:  SPRC LSBRACK.names RSBRACK COLON expression 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 36
	names  goto 68

state 56
	functions:  LABEL LPAREN RPAREN EQUALS.expression 

	LABEL  shift 11
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 13
	PRINT  shift 12
	.  error

	expression  goto 69
	name  goto 7

state 57
	functions:  LABEL LPAREN names RPAREN.EQUALS expression functions 

	EQUALS  shift 70
	.  error


state 58
	expression:  SEND name LANGLE name COMMA.name RANGLE 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 71

state 59
	expression:  LANGLE name COMMA name RANGLE.LEFT_ARROW RECEIVE name SEQUENCE expression 
	expression:  LANGLE name COMMA name RANGLE.LEFT_ARROW SPLIT name SEQUENCE expression 

	LEFT_ARROW  shift 72
	.  error


state 60
	expression:  name DOT LABEL LANGLE name.RANGLE 

	RANGLE  shift 73
	.  error


state 61
	expression:  name LEFT_ARROW NEW LPAREN expression.RPAREN SEQUENCE expression 

	RPAREN  shift 74
	.  error


state 62
	expression:  name LEFT_ARROW NEW expression SEQUENCE.expression 

	LABEL  shift 11
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 13
	PRINT  shift 12
	.  error

	expression  goto 75
	name  goto 7

state 63
	expression:  CASE name LPAREN branches RPAREN.    (11)

	.  reduce 11 (src line 58)


state 64
	branches:  branches PIPE.LABEL LANGLE name RANGLE RIGHT_ARROW expression 

	LABEL  shift 76
	.  error


state 65
	branches:  LABEL LANGLE.name RANGLE RIGHT_ARROW expression 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 77

state 66
	names:  name COMMA names.    (24)

	.  reduce 24 (src line 88)


state 67
	process:  PRC LSBRACK names.RSBRACK COLON expression 

	RSBRACK  shift 78
	.  error


state 68
	process:  SPRC LSBRACK names.RSBRACK COLON expression 

	RSBRACK  shift 79
	.  error


state 69
	functions:  LABEL LPAREN RPAREN EQUALS expression.    (28)

	.  reduce 28 (src line 95)


state 70
	functions:  LABEL LPAREN names RPAREN EQUALS.expression functions 

	LABEL  shift 11
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 13
	PRINT  shift 12
	.  error

	expression  goto 80
	name  goto 7

state 71
	expression:  SEND name LANGLE name COMMA name.RANGLE 

	RANGLE  shift 81
	.  error


state 72
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW.RECEIVE name SEQUENCE expression 
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW.SPLIT name SEQUENCE expression 

	RECEIVE  shift 82
	SPLIT  shift 83
	.  error


state 73
	expression:  name DOT LABEL LANGLE name RANGLE.    (10)

	.  reduce 10 (src line 56)


state 74
	expression:  name LEFT_ARROW NEW LPAREN expression RPAREN.SEQUENCE expression 

	SEQUENCE  shift 84
	.  error


state 75
	expression:  name LEFT_ARROW NEW expression SEQUENCE expression.    (13)

	.  reduce 13 (src line 62)


state 76
	branches:  branches PIPE LABEL.LANGLE name RANGLE RIGHT_ARROW expression 

	LANGLE  shift 85
	.  error


state 77
	branches:  LABEL LANGLE name.RANGLE RIGHT_ARROW expression 

	RANGLE  shift 86
	.  error


state 78
	process:  PRC LSBRACK names RSBRACK.COLON expression 

	COLON  shift 87
	.  error


state 79
	process:  SPRC LSBRACK names RSBRACK.COLON expression 

	COLON  shift 88
	.  error


state 80
	functions:  LABEL LPAREN names RPAREN EQUALS expression.functions 
	functions: .    (27)

	LABEL  shift 15
	.  reduce 27 (src line 93)

	functions  goto 89

state 81
	expression:  SEND name LANGLE name COMMA name RANGLE.    (8)

	.  reduce 8 (src line 52)


state 82
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW RECEIVE.name SEQUENCE expression 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 90

state 83
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW SPLIT.name SEQUENCE expression 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 91

state 84
	expression:  name LEFT_ARROW NEW LPAREN expression RPAREN SEQUENCE.expression 

	LABEL  shift 11
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 13
	PRINT  shift 12
	.  error

	expression  goto 92
	name  goto 7

state 85
	branches:  branches PIPE LABEL LANGLE.name RANGLE RIGHT_ARROW expression 

	LABEL  shift 17
	SELF  shift 13
	.  error

	name  goto 93

state 86
	branches:  LABEL LANGLE name RANGLE.RIGHT_ARROW expression 

	RIGHT_ARROW  shift 94
	.  error


state 87
	process:  PRC LSBRACK names RSBRACK COLON.expression 

	LABEL  shift 11
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 13
	PRINT  shift 12
	.  error

	expression  goto 95
	name  goto 7

state 88
	process:  SPRC LSBRACK names RSBRACK COLON.expression 

	LABEL  shift 11
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 13
	PRINT  shift 12
	.  error

	expression  goto 96
	name  goto 7

state 89
	functions:  LABEL LPAREN names RPAREN EQUALS expression functions.    (29)

	.  reduce 29 (src line 97)


state 90
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW RECEIVE name.SEQUENCE expression 

	SEQUENCE  shift 97
	.  error


state 91
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW SPLIT name.SEQUENCE expression 

	SEQUENCE  shift 98
	.  error


state 92
	expression:  name LEFT_ARROW NEW LPAREN expression RPAREN SEQUENCE expression.    (12)

	.  reduce 12 (src line 60)


state 93
	branches:  branches PIPE LABEL LANGLE name.RANGLE RIGHT_ARROW expression 

	RANGLE  shift 99
	.  error


state 94
	branches:  LABEL LANGLE name RANGLE RIGHT_ARROW.expression 

	LABEL  shift 11
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 13
	PRINT  shift 12
	.  error

	expression  goto 100
	name  goto 7

state 95
	process:  PRC LSBRACK names RSBRACK COLON expression.    (6)

	.  reduce 6 (src line 49)


state 96
	process:  SPRC LSBRACK names RSBRACK COLON expression.    (7)

	.  reduce 7 (src line 50)


state 97
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW RECEIVE name SEQUENCE.expression 

	LABEL  shift 11
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 13
	PRINT  shift 12
	.  error

	expression  goto 101
	name  goto 7

state 98
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW SPLIT name SEQUENCE.expression 

	LABEL  shift 11
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 13
	PRINT  shift 12
	.  error

	expression  goto 102
	name  goto 7

state 99
	branches:  branches PIPE LABEL LANGLE name RANGLE.RIGHT_ARROW expression 

	RIGHT_ARROW  shift 103
	.  error


state 100
	branches:  LABEL LANGLE name RANGLE RIGHT_ARROW expression.    (21)

	.  reduce 21 (src line 83)


state 101
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW RECEIVE name SEQUENCE expression.    (9)

	.  reduce 9 (src line 54)


state 102
	expression:  LANGLE name COMMA name RANGLE LEFT_ARROW SPLIT name SEQUENCE expression.    (16)

	.  reduce 16 (src line 68)


state 103
	branches:  branches PIPE LABEL LANGLE name RANGLE RIGHT_ARROW.expression 

	LABEL  shift 11
	LANGLE  shift 6
	SEND  shift 5
	CASE  shift 8
	CLOSE  shift 9
	FORWARD  shift 10
	SELF  shift 13
	PRINT  shift 12
	.  error

	expression  goto 104
	name  goto 7

state 104
	branches:  branches PIPE LABEL LANGLE name RANGLE RIGHT_ARROW expression.    (22)

	.  reduce 22 (src line 84)


42 terminals, 10 nonterminals
30 grammar rules, 105/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
59 working sets used
memory: parser 59/240000
59 extra closures
199 shift entries, 1 exceptions
47 goto entries
13 entries saved by goto default
Optimizer space used: output 136/240000
136 table entries, 7 zero
maximum spread: 42, maximum offset: 103
